# aida

./: DEPENDENCY_SOLUTION_SUMMARY.md  DEPENDENCY_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  README.md  SAFETY.md  VISUALIZER_FIXES.md  VISUALIZER_STATUS.md  del.py  dir.txt  libgl1-mesa-glx_23.0.4-0ubuntu1~22.04.1_amd64.deb  pyproject.toml  requirements-flexible.txt  requirements.txt  run_assistant_nvidia.sh  setup.sh  setup_kubuntu.sh  start_assistant.sh  test_setup.py  test_visualizer.py  voice-assistant.service
configs/: config.json  models_config.json  safety_rules.json
embeddings/: chroma.sqlite3
knowledge/: knowledge_base.json
src/: __init__.py  audio_visualizer.py  computer_controller.py  llm_backend.py  memory_manager.py  visualizer_integration_example.py  voice_assistant.py  web_visualizer.py
src/core/: __init__.py  command_handler.py  nlp_processor.py  robust_speech_engine.py  speech_engine.py
src/plugins/: __init__.py  file_plugin.py  math_plugin.py  system_plugin.py
src/utils/: __init__.py  audio_utils.py  config_loader.py  safety_utils.py
